--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!doctype html>
 <html>
 <head>
-    <title>Sadeka Haque</title>
+    <title>Sadeka Haque | Machine Learning Enthusiast</title>
     <meta charset="utf-8">
+    <meta content="machine learning, deep learning, data scientist, development, web, shahariar, rabby, shahariarrabby, ekush, bangla"
+          name="keywords">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-    <meta name="description" content="I create AI and code things on the web."/>
-    <meta property="og:site_name" content="juliangarnier.com"/>
+    <meta name="description" content="I'm a Polyglot Computer Scientist,passionate about technology and futurism"/>
+    <meta property="og:site_name" content="sadekahaque.github.io"/>
     <meta property="og:title" content="Sadeka Haque"/>
     <meta property="og:description" content="If you know me you know what I'm able to do."/>
     <meta property="og:type" content="website"/>
+    <meta content="summary" name="twitter:card">
+    <meta content="index.html" name="twitter:url">
+    <meta content="@sadekahaque" name="twitter:site">
+    <meta content="@sadekahaque" name="twitter:creator">
+    <meta content="Sadeka Haque | Machine Learning Enthusiast" name="twitter:title">
     <meta name="google-site-verification" content="sVcUnVfNGS3ZZQS--EtKn-PluI_4PDVrDY7HzU0fAP4"/>
     <meta property="og:url" content="index.html"/>
     <meta property="og:image" content="img/og-image.png"/>
@@ -18,6 +25,7 @@
     <link rel="icon" type="image/png" href="img/favicon.png"/>
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png"/>
     <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css"/>
+</head>
 <body>
 <div class="messages"></div>
 <script src="js/anime.js"></script>
@@ -37,6 +45,5 @@
     ga('create', 'UA-37236197-1', 'auto');
     ga('send', 'pageview');
 </script>
-</head>
 </body>
 </html>
