--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <meta name="description" content="I'm a Polyglot Computer Scientist,passionate about technology and futurism"/>
     <meta property="og:site_name" content="sadekahaque.github.io"/>
-    <meta property="og:title" content="Sadeka Haque"/>
+    <meta property="og:title" content="Sadeka Haque | Machine Learning Enthusiast"/>
     <meta property="og:description" content="If you know me you know what I'm able to do."/>
     <meta property="og:type" content="website"/>
     <meta content="summary" name="twitter:card">
